# comer

./: ChangeLog  Makefile.in  README  VERSION  comer.kdev4  configure  configure.in
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
binaries/linux32/var/: PSCORES  cvs2s  ihdpssss3  ihdpssss6  options.txt
optimized/: Makefile  config.h  config.status  libtool
optimized/src/: Makefile
src/: .kdev_include_paths  Makefile.am  Makefile.in
src/HDPres/: HDPCalcPrior.cpp  HDPCalcPrior.h  HDPSmplGenerator.cpp  HDPSmplGenerator.h  HDPsampler.cpp  HDPsampler.h  HDPsampler_JNMCMC.cpp  HDPsampler_SMCMC.cpp  HDPsampler_master.cpp  HDPsampler_rw.cpp  HDPsampler_slave.cpp  Makefile.am  Makefile.in  ProFreqWriter.cpp  ProFreqWriter.h  fsample.cpp  fsample.h  hdpclust.cpp  hdpclust.h  hdpclust.hyd.sh  hdpclust.sh  hdprior.cpp  hdprior.h  hdpsim.cpp  hdpsim.h
src/blast2fa/: Makefile.am  Makefile.in
src/comer/: Makefile.am  Makefile.in  comer.cpp  comer.h
src/env/: Makefile.am  Makefile.in  PSCORES.c45  PSCORES.c62  PSCORES.c70  PSCORES.c85  comer.pro.par  gonnet.mat  hdpssss  ihdpssss  nodes.lst  options.txt
src/ext/: Makefile.am  Makefile.in  beta.cpp  beta.h  betainc.cpp  betainc.h  cheb.cpp  cheb.h  digamma.cpp  digamma.h  erf.cpp  erf.h  exp.cpp  exp.h  expint.cpp  expint.h  gamma.cpp  gamma.h  gammainc.cpp  gammainc.h  ivector.cpp  ivector.h  log.cpp  log.h  nsmatrix.cpp  nsmatrix.h  psl.h  pslcodes.h  pslmatrix.cpp  pslmatrix.h  pslvector.cpp  pslvector.h  rng.cpp  rng.h  spdmatrix.cpp  spdmatrix.h  zeta.cpp  zeta.h
src/ext/rv/: rmv.h  rmvdir.cpp  rmvdir.h  rmvnorm.cpp  rmvnorm.h  rmvt.cpp  rmvt.h  rv.h  rvbeta.cpp  rvbeta.h  rvchi2.cpp  rvchi2.h  rvdisc.cpp  rvdisc.h  rvexp.cpp  rvexp.h  rvgamma.cpp  rvgamma.h  rvnorm.cpp  rvnorm.h  rvt.cpp  rvt.h
src/genmsa/: MSAGenerator.cpp  MSAGenerator.h  Makefile.am  Makefile.in  genmsa.cpp  genmsa.h
src/genpro/: Makefile.am  Makefile.in  ProGenerator.cpp  ProGenerator.h  genpro.cpp  genpro.h
src/libHDP/: HDP_SSSScores.cpp  HDP_SSSScores.h  HDPbase.cpp  HDPbase.h  HDPbase_probmtx.cpp  HDPbase_probvec.cpp  HDPbase_rw.cpp  HDPscores.cpp  HDPscores.h  Makefile.am  Makefile.in  basin.cpp  basin.h  dish.cpp  dish.h  hdplib.h  iHDP_SSSScores.cpp  iHDP_SSSScores.h  menu.cpp  menu.h  restaurant.cpp  restaurant.h  rntchain.cpp  rntchain.h  table.cpp  table.h
src/libhsh/: CRCHashing.cpp  CRCHashing.h  HashFunctions.cpp  HashFunctions.h  HashTable.cpp  HashTable.h  MD5Hashing.cpp  MD5Hashing.h  Makefile.am  Makefile.in  RJHashing.cpp  RJHashing.h  SBoxHashing.cpp  SBoxHashing.h
src/liblib/: BinarySearchStructure.cpp  BinarySearchStructure.h  ConfigFile.cpp  ConfigFile.h  CtxtCoefficients.cpp  CtxtCoefficients.h  CtxtFrequencies.cpp  CtxtFrequencies.h  Makefile.am  Makefile.in  compdef.h  data.cpp  data.h  debug.h  defines.h  faccess.cpp  faccess.h  logitnormal.cpp  logitnormal.h  myexcept.cpp  myexcept.h  mystring.cpp  mystring.h  needconfig.h  pcmath.cpp  pcmath.h  platform.h  rc.cpp  rc.h  stat.cpp  stat.h  types.h  version.h
src/libpro/: Makefile.am  Makefile.in
src/libpro/srcaln/: AlignmentProbe.cpp  AlignmentProbe.h  AlignmentSimulation.cpp  AlignmentSimulation.h  FastAlignment.cpp  FastAlignment.h  HybridAlignment.cpp  HybridAlignment.h  IMAClusters.cpp  IMAClusters.h  IMACountFiles.cpp  IMACountFiles.h  IMACounts.cpp  IMACounts.h  InputMultipleAlignment.cpp  InputMultipleAlignment.cpp.obs  InputMultipleAlignment.h  InputMultipleAlignment.h.obs  MAAlignment.cpp  MAAlignment.h  ProfileAlignment.cpp  ProfileAlignment.h  ProfileSearching.cpp  ProfileSearching.h  ProfileShuffler.cpp  ProfileShuffler.h
src/libpro/srcpro/: CVS2Scores.cpp  CVS2Scores.h  Configuration.cpp  Configuration.h  DBProfileProbs.cpp  DBProfileProbs.h  Database.cpp  Database.h  DescriptionVector.cpp  DescriptionVector.h  DistributionMatrix.cpp  DistributionMatrix.h  FrequencyStore.cpp  FrequencyStore.h  GapScheme.cpp  GapScheme.h  MOptions.cpp  MOptions.h  SEGProfile.cpp  SEGProfile.h  SSSScores.cpp  SSSScores.h  Serializer.cpp  Serializer.h  VirtScores.cpp  VirtScores.h  datapro.cpp  datapro.h
src/libpro/srcsco/: AbstractScoreMatrix.cpp  AbstractScoreMatrix.h  AbstractUniversalScoreMatrix.cpp  AbstractUniversalScoreMatrix.h  AdjustedScoreMatrix.cpp  AdjustedScoreMatrix.h  AttributableScores.cpp  AttributableScores.h  AttributableScoresFPI.cpp  AttributableScoresFPI.h  AttributableScoresII.cpp  AttributableScoresII.h  HDP0CtxScoreMatrix.cpp  HDP0CtxScoreMatrix.h  HDP0ScoreMatrix.cpp  HDP0ScoreMatrix.h  LSOSMatrix.cpp  LSOSMatrix.h  ProfileMatrix.cpp  ProfileMatrix.h  ScoringMatrix.cpp  ScoringMatrix.h  UniversalScoreMatrix.cpp  UniversalScoreMatrix.h
src/libpro/tfopt/: TargetFreqOptimizerH.cpp  TargetFreqOptimizerH.h
src/libseg/: Makefile.am  Makefile.in  SEGAbstract.cpp  SEGAbstract.h  SEGSequence.cpp  SEGSequence.h  SegmentStructure.cpp  SegmentStructure.h  segdata.cpp  segdata.h
src/lmpi/: Makefile.am  Makefile.in  MessageDispatcher.cpp  MessageDispatcher.h  mpiloc.h  msgcodes.h
src/makedb/: Makefile.am  Makefile.in  makedb.cpp  makedb.h
src/makepro/: Makefile.am  Makefile.in  makepro.cpp  makepro.h  makepro.sh  select.cpp  select.h  ssp2.pl
src/mpiscaler/: Makefile.am  Makefile.in  PScaler.cpp  PScaler.h  ParallelUniversalScoreMatrix.cpp  ParallelUniversalScoreMatrix.h  PrlHDPUniversalScoreMatrix.cpp  PrlHDPUniversalScoreMatrix.h  PrlLSOUniversalScoreMatrix.cpp  PrlLSOUniversalScoreMatrix.h  mpiscaler.cpp  mpiscaler.h
src/pcluster/: Makefile.am  Makefile.in  pcluster.cpp  pcluster.h
src/pscores/: Makefile.am  Makefile.in  pscores.cpp  pscores.h
src/rndmsa/: Makefile.am  Makefile.in  RndMSAGenerator.cpp  RndMSAGenerator.h  rndmsa.cpp  rndmsa.h
src/root/: Makefile.am  Makefile.in  rcodes.h  root.cpp  root.h
src/segpro/: Makefile.am  Makefile.in  segpro.cpp  segpro.h
src/smpl/: Makefile.am  Makefile.in  ars.h  carms.cpp  carms.h  cars.cpp  cars.h  slicesmpl.cpp  slicesmpl.h
src/sort/: Makefile.am  Makefile.in  hsort.cpp  hsort.h  sort.h
templates/: h
(+177 files in other folders)
