METASOURCES = AUTO
if COND_MPI
    LMPI = lmpi
    MPISCALER = mpiscaler
    HDPRES = HDPres
endif
SUBDIRS = ext \
	root \
	sort \
	smpl \
	liblib \
	libhsh \
	libseg \
	libpro \
        libHDP \
	$(LMPI) \
	$(HDPRES) \
	$(MPISCALER) \
	blast2fa \
	env \
	comer \
	makedb \
	makepro \
	genpro \
	genmsa \
	rndmsa \
	pcluster \
	pscores \
	segpro
