INCLUDES = -I$(top_srcdir)/src \
	-I$(top_srcdir)/src/ext \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = liblib.a
AM_CXXFLAGS = -DLOCALSTATEDIR=$(localstatedir)
liblib_a_SOURCES = \
	BinarySearchStructure.cpp \
	ConfigFile.cpp \
	CtxtCoefficients.cpp \
	CtxtFrequencies.cpp \
	data.cpp \
	faccess.cpp \
        logitnormal.cpp \
	myexcept.cpp \
	mystring.cpp \
	pcmath.cpp \
	rc.cpp \
	stat.cpp
